<resources>
    <string name="app_name">Campus UQ</string>
    <string name="app_description">Aplicación Móvil para la interacción con la Universidad del Quindío</string>
    <string name="developed_by">Desarrollado por:</string>
    <string name="author">Juan Camilo González Idárraga</string>
    <string name="program">Ingeniería de Sistemas y Computación</string>
    <string name="university">Universidad del Quindío</string>
    <string name="city">Armenia - Quindío</string>
    <string name="country">Colombia</string>
    <string name="university_mail">Correo Institucional: jcgonzalezi@uqvirtual.edu.co</string>
    <string name="personal_mail">Correo Personal: juancamilo96b@hotmail.com</string>
    <string name="app_title_menu">Menú</string>
    <string name="function_menu">Menú de Funciones</string>
    <string name="select_items">Seleccione un ítem</string>
    <string name="search_hint">Buscar ítems</string>
    <string name="information_module">Información</string>
    <string name="events">Eventos</string>
    <string name="events_description">Ver y compartir los eventos de la Universidad del Quindío</string>
    <string name="news">Noticias</string>
    <string name="news_description">Ver y compartir las noticias de la Universidad del Quindío</string>
    <string name="institution">Institución</string>
    <string name="institution_description">Ver la misión, visión, política de calidad, ejes estratégicos y símbolos de la UQ</string>
    <string name="directory">Directorio telefónico</string>
    <string name="directory_description">Ver información de contacto de las dependencias y funcionarios de la UQ</string>
    <string name="academic_offer">Oferta académica</string>
    <string name="academic_offer_description">Consultar el perfil ocupacional y el plan de estudios de los programas</string>
    <string name="academic_calendar">Calendario académico</string>
    <string name="academic_calendar_description">Ver la programación de los eventos académicos de la Universidad</string>
    <string name="employment_exchange">Bolsa de empleo</string>
    <string name="employment_exchange_description">Ingresar al portal de empleos de la Universidad del Quindío</string>
    <string name="institutional_welfare">Bienestar institucional</string>
    <string name="institutional_welfare_description">Consultar la oferta de cursos deportivos y culturales de la UQ</string>
    <string name="services_module">Servicios</string>
    <string name="university_map">Mapa de la universidad</string>
    <string name="university_map_description">Orientarse dentro de la Universidad mediante un mapa con indicaciones</string>
    <string name="library_services">Servicios de biblioteca</string>
    <string name="library_services_description">Acceder al repositorio digital, al catálogo público y a las bases de datos</string>
    <string name="radio">Emisora institucional</string>
    <string name="radio_description">Escuchar la emisora de la Universidad "La UFM Estéreo" 102.1 FM</string>
    <string name="pqrsd_system">Sistema PQRSD</string>
    <string name="pqrsd_system_description">Realizar peticiones, quejas, reclamos, solicitudes y denuncias a la Universidad</string>
    <string name="lost_objects">Objetos perdidos</string>
    <string name="lost_objects_description">Consultar y reportar objetos perdidos dentro de la Universidad</string>
    <string name="security_system">Sistema de seguridad</string>
    <string name="security_system_description">Consultar y reportar emergencias, robos y otros incidentes</string>
    <string name="state_module">Estado</string>
    <string name="restaurant">Menú del restaurante</string>
    <string name="restaurant_description">Ver el menú del restaurante de la Universidad, detalles y precios</string>
    <string name="billboard_information">Información de cartelera</string>
    <string name="billboard_information_description">Ver y compartir la información publicada en cartelera</string>
    <string name="computer_rooms">Salas de cómputo</string>
    <string name="computer_rooms_description">Consultar la disponibilidad de las salas de cómputo de la Universidad</string>
    <string name="parking_lots">Parqueaderos</string>
    <string name="parking_lots_description">Consultar la disponibilidad de los estacionamientos de la Universidad</string>
    <string name="laboratories">Laboratorios</string>
    <string name="laboratories_description">Consultar la disponibilidad de los laboratorios de la Universidad</string>
    <string name="study_areas">Zonas de estudio</string>
    <string name="study_areas_description">Consultar la disponibilidad de las zonas de estudio de la Universidad</string>
    <string name="cultural_and_sport">Culturales y deportivos</string>
    <string name="cultural_and_sport_description">Consultar la disponibilidad de los espacios culturales y deportivos de la Universidad</string>
    <string name="auditoriums">Auditorios</string>
    <string name="auditoriums_description">Consultar la disponibilidad de los auditorios de la Universidad</string>
    <string name="communication_module">Comunicación</string>
    <string name="institutional_mail">Correo institucional</string>
    <string name="institutional_mail_description">Leer y escribir correos desde la cuenta de correo institucional</string>
    <string name="web_page">Página web</string>
    <string name="web_page_description">Ingresar a la página web de la Universidad del Quindío</string>
    <string name="ecotic">Ecotic</string>
    <string name="ecotic_description">Ingresar al sistema ECOTIC de la Universidad del Quindío</string>
    <string name="mission_vision">Misión y visión</string>
    <string name="mission_vision_description">Ver la misión y la visión actuales de la Universidad del Quindío</string>
    <string name="quality_policy">Política de calidad</string>
    <string name="quality_policy_description">Ver la política de calidad de la Universidad del Quindío</string>
    <string name="axes_pillars_objectives">Ejes estratégicos, pilares y objetivos</string>
    <string name="axes_pillars_objectives_description">Ver los ejes estratégicos, pilares y objetivos de la Universidad del Quindío</string>
    <string name="organization_chart">Organigrama</string>
    <string name="organization_chart_description">Ver la estructura organizacional de la Universidad del Quindío</string>
    <string name="normativity">Normatividad</string>
    <string name="normativity_description">Ver los estatutos, acuerdos, reglamentos y decretos de la Universidad del Quindío</string>
    <string name="symbols">Símbolos</string>
    <string name="symbols_description">Reseña histórica, logotipo, himno, bandera y estampilla de la Universidad del Quindío</string>
    <string name="digital_repository">Repositorio digital</string>
    <string name="digital_repository_description">Buscar artículos, e-books, libros, revistas electrónicas y demás contenido digital</string>
    <string name="public_catalog">Catálogo público</string>
    <string name="public_catalog_description">Consultar el material bibliográfico disponible en las bibliotecas</string>
    <string name="databases">Bases de datos</string>
    <string name="databases_description">Buscar recursos digitales en las diferentes bases de datos que ofrece la universidad</string>
    <string name="history">Historia</string>
    <string name="history_description">Leer la historia detallada del programa</string>
    <string name="program_mission_vision">Misión y visión del programa</string>
    <string name="program_mission_vision_description">Leer la misión y visión específicos del programa</string>
    <string name="curriculum">Plan de estudios</string>
    <string name="curriculum_description">Ver las asignaturas, créditos y requisitos por semestre del programa</string>
    <string name="profiles">Perfil profesional y ocupacional</string>
    <string name="profiles_description">Leer la descripción de las habilidades obtenidas al egresar de este programa</string>
    <string name="program_contact">Información adicional</string>
    <string name="program_contact_description">Ver información de contacto, registro calificado, horarios de atención, etc.</string>
    <string name="read_more">Leer más</string>
    <string name="news_detail">Detalle de noticia</string>
    <string name="mark_as_read">Marcar como leído</string>
    <string name="contacts">%d contacto(s)</string>
    <string name="description"><![CDATA[<b id=\'1\'>Dirección:</b> %1$s<br/><b id=\'2\'>Teléfono:</b> %2$s<br/><b id=\'3\'>Correo:</b> %3$s<br/><b id=\'4\'>Cargo:</b> %4$s<br/><b id=\'5\'>Información adicional:</b> %5$s]]></string>
    <string name="add_contact">Añadir Contacto</string>
    <string name="call">Llamar</string>
    <string name="contact_added">Contacto añadido correctamente</string>
    <string name="contact_error">Error al añadir contacto: %s</string>
    <string name="invalid_phone">Teléfono invalido</string>
    <string name="no_records">No hay registros</string>
    <string name="category">Categoría</string>
    <string name="select_event">Seleccione un evento para ver fechas detalladas</string>
    <string name="log_out">Cerrar Sesión</string>
    <string name="action_change_language">Cambiar idioma</string>
    <string name="action_adjust_notifications">Ajustar notificaciones</string>
    <string name="action_delete_history">Eliminar historial</string>
    <string name="action_login">Cuenta de usuario</string>
    <string name="action_credits">Créditos</string>
    <string name="send">ENVIAR</string>
    <string name="user_detail_title">DATOS DE CONTACTO</string>
    <string name="user_detail_name">Nombre y Apellidos</string>
    <string name="user_detail_name_hint">Escribe tu nombre y apellidos</string>
    <string name="user_detail_email">Correo Electrónico</string>
    <string name="user_detail_email_hint">Escribe tu correo electrónico</string>
    <string name="user_detail_phone">Teléfono Celular o Fijo (Opcional)</string>
    <string name="user_detail_phone_hint">Escribe un teléfono de contacto (opcional)</string>
    <string name="user_detail_address">Dirección (Opcional)</string>
    <string name="user_detail_address_hint">Escribe una dirección de contacto (opcional)</string>
    <string name="user_detail_document">Número de Documento (Opcional)</string>
    <string name="user_detail_document_hint">Escribe tu número de identificación (opcional)</string>
    <string name="user_detail_password">Contraseña</string>
    <string name="user_detail_password_hint">Escribe una contraseña de entre 8 y 16 caracteres</string>
    <string name="dish_detail_title">DETALLES</string>
    <string name="dish_detail_name">Nombre</string>
    <string name="dish_detail_name_hint">Escribe el nombre del plato</string>
    <string name="dish_detail_description">Descripción</string>
    <string name="dish_detail_description_hint">Escribe una breve descripción de la comida para informar mejor al consumidor y brindar un mejor servicio</string>
    <string name="dish_detail_sample_description_count">110</string>
    <string name="dish_detail_description_count_limit">/250</string>
    <string name="dish_detail_price">Precio</string>
    <string name="dish_detail_price_hint">Asígnale un precio al plato</string>
    <string name="dish_detail_image">Imagen o Foto (Opcional)</string>
    <string name="dish_detail_ok">ENVIAR</string>
    <string name="email_detail_from">De:</string>
    <string name="email_detail_from_hint">Correo institucional</string>
    <string name="email_detail_to">Para:</string>
    <string name="email_detail_to_hint">Escribe el destinatario</string>
    <string name="email_detail_name">Asunto:</string>
    <string name="email_detail_name_hint">Escribe el asunto</string>
    <string name="email_detail_content">Correo:</string>
    <string name="email_detail_content_hint">Escribe el contenido</string>
    <string name="email_detail_ok">ENVIAR</string>
</resources>