<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="co.edu.uniquindio.campusuq.users.UsersActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/user_detail_title"
                android:textSize="15sp"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimaryDark"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_detail_name"
                android:textSize="12sp"
                android:textColor="@color/colorPrimary"
                android:layout_marginStart="4dp"/>

            <EditText
                android:id="@+id/user_detail_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textSize="15sp"
                android:inputType="textPersonName"
                android:hint="@string/user_detail_name_hint"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_detail_email"
                android:textSize="12sp"
                android:textColor="@color/colorPrimary"
                android:layout_marginStart="4dp"/>

            <TextView
                android:id="@+id/user_detail_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textSize="15sp"
                android:hint="@string/user_detail_email_hint"
                style="@android:style/Widget.EditText"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_detail_phone"
                android:textSize="12sp"
                android:textColor="@color/colorPrimary"
                android:layout_marginStart="4dp"/>

            <EditText
                android:id="@+id/user_detail_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textSize="15sp"
                android:inputType="phone"
                android:hint="@string/user_detail_phone_hint"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_detail_address"
                android:textSize="12sp"
                android:textColor="@color/colorPrimary"
                android:layout_marginStart="4dp"/>

            <EditText
                android:id="@+id/user_detail_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textSize="15sp"
                android:inputType="text"
                android:hint="@string/user_detail_address_hint"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_detail_document"
                android:textSize="12sp"
                android:textColor="@color/colorPrimary"
                android:layout_marginStart="4dp"/>

            <EditText
                android:id="@+id/user_detail_document"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textSize="15sp"
                android:inputType="number"
                android:hint="@string/user_detail_document_hint"/>

            <LinearLayout
                android:id="@+id/user_detail_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_detail_password"
                    android:textSize="12sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginStart="4dp"/>

                <EditText
                    android:id="@+id/user_detail_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:textSize="15sp"
                    android:inputType="textPassword"
                    android:hint="@string/user_detail_password_hint"/>

            </LinearLayout>

            <Button
                android:id="@+id/user_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/send"
                android:textSize="15sp"
                android:textColor="@android:color/white"
                android:backgroundTint="@color/colorPrimary"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/user_log_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/log_out"
                android:textSize="12sp"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>