<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="co.edu.uniquindio.campusuq.activity.EmailsDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:scrollbars="vertical">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/email_detail_from"
                android:textSize="12sp"
                android:textColor="@color/colorPrimary"/>

            <TextView
                android:id="@+id/email_detail_from"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textSize="15sp"
                android:hint="@string/email_detail_from_hint"
                style="@android:style/Widget.EditText"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/email_detail_to"
                android:textSize="12sp"
                android:textColor="@color/colorPrimary"/>

            <EditText
                android:id="@+id/email_detail_to"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textSize="15sp"
                android:inputType="textEmailAddress"
                android:hint="@string/email_detail_to_hint"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/email_detail_name"
                android:textSize="12sp"
                android:textColor="@color/colorPrimary"/>

            <EditText
                android:id="@+id/email_detail_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textSize="15sp"
                android:inputType="text"
                android:hint="@string/email_detail_name_hint"
                tools:ignore="TextFields"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/email_detail_content"
                android:textSize="12sp"
                android:textColor="@color/colorPrimary"/>

            <EditText
                android:id="@+id/email_detail_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textSize="15sp"
                android:inputType="textMultiLine"
                android:hint="@string/email_detail_content_hint"
                tools:ignore="TextFields" />

            <Button
                android:id="@+id/email_detail_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/email_detail_ok"
                android:textSize="15sp"
                android:textColor="@android:color/white"
                android:backgroundTint="@color/colorPrimary"/>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>