<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.edu.uniquindio.campusuq.activity.DishesDetailActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="25dp"
        android:scrollbars="vertical">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:paddingBottom="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/dish_detail_title"
                android:textSize="15sp"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimaryDark"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dish_detail_name"
                android:textSize="12sp"
                android:textColor="@color/colorPrimary"/>
            <EditText
                android:id="@+id/dish_detail_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textSize="15sp"
                android:inputType="text"
                android:hint="@string/dish_detail_name_hint"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dish_detail_description"
                android:textSize="12sp"
                android:textColor="@color/colorPrimary"/>
            <EditText
                android:id="@+id/dish_detail_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:maxLength="120"
                android:hint="@string/dish_detail_description_hint"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end">
                <TextView
                    android:id="@+id/dish_detail_description_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dish_detail_sample_description_count"
                    android:textSize="12sp"
                    android:textColor="@color/colorPrimary"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dish_detail_description_count_limit"
                    android:textSize="12sp"
                    android:textColor="@color/colorPrimary"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dish_detail_price"
                android:textSize="12sp"
                android:textColor="@color/colorPrimary"/>
            <EditText
                android:id="@+id/dish_detail_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:textSize="15sp"
                android:inputType="number"
                android:hint="@string/dish_detail_price_hint"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dish_detail_image"
                android:textSize="12sp"
                android:textColor="@color/colorPrimary"/>
            <ImageView
                android:id="@+id/dish_detail_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_margin="10dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/rectangle_gray"/>
            <Button
                android:id="@+id/dish_detail_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/dish_detail_ok"
                android:textSize="15sp"
                android:textColor="@android:color/white"
                android:backgroundTint="@color/colorPrimary"/>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>